--- a/Source/Enter.UI/Styles/_mixins.scss
+++ b/Source/Enter.UI/Styles/_mixins.scss
@@ -32,3 +32,16 @@
 
   @return $list;
 }
+
+@function tint($color, $percentage) {
+  @return mix(white, $color, $percentage);
+}
+
+/// Slightly darken a color
+/// @access public
+/// @param {Color} $color - color to shade
+/// @param {Number} $percentage - percentage of `$color` in returned color
+/// @return {Color}
+@function shade($color, $percentage) {
+  @return mix(black, $color, $percentage);
+}
