--- a/Source/Enter.UI/Styles/components/_components.scss
+++ b/Source/Enter.UI/Styles/components/_components.scss
@@ -64,3 +64,4 @@
 @import "ent_toast.component";
 @import "ent_drawer.component";
 @import "ent_pagination.component";
+@import "ent_uploadbox.component";
