--- a/Source/Enter.UI/wwwroot/libs/remix/remixicon.less
+++ b/Source/Enter.UI/wwwroot/libs/remix/remixicon.less
@@ -208,8 +208,8 @@
 .ri-barcode-line:before { content: "\eaa2"; }
 .ri-barricade-fill:before { content: "\eaa3"; }
 .ri-barricade-line:before { content: "\eaa4"; }
-.ri-base-station-fill:before { content: "\eaa5"; }
-.ri-base-station-line:before { content: "\eaa6"; }
+.ri-default-station-fill:before { content: "\eaa5"; }
+.ri-default-station-line:before { content: "\eaa6"; }
 .ri-basketball-fill:before { content: "\eaa7"; }
 .ri-basketball-line:before { content: "\eaa8"; }
 .ri-battery-2-charge-fill:before { content: "\eaa9"; }
