--- a/Source/Enter.UI/Components/Modal/EntMessageBox.razor
+++ b/Source/Enter.UI/Components/Modal/EntMessageBox.razor
@@ -7,8 +7,8 @@
  <div class="@RootCss" >
      <EntText Type="EntTextType.Bold" class="ent-messagebox-title">@Message</EntText>
      <div class="ent-messagebox-action">
-         <EntButton Color="ButtonColor.Primary" @onclick="OnConfirmClick">@ConfirmText</EntButton>
-         <EntButton Color="ButtonColor.Light" @onclick="OnCancelClick">@CancelText</EntButton>
+         <EntButton Color="ButtonColor.Primary"  @onclick="OnConfirmClick">@ConfirmText</EntButton>
+         <EntButton  @onclick="OnCancelClick">@CancelText</EntButton>
      </div>
 </div>
 
