--- a/Source/Enter.UI/Styles/themes/dark.theme.scss
+++ b/Source/Enter.UI/Styles/themes/dark.theme.scss
@@ -1,5 +1,55 @@
 html[data-theme="dark"] {
 
+  // Background - Body
+  --ent-bg-page: #2b2b2b;
+
+  // Background - Base - Shade 5% OF BODY
+  --ent-bg-base: #2e2e2e;
+  --ent-bg-base-highlight: #323232;
+  --ent-bg-base-active: #363636;
+  --ent-bg-base-emphasis: #3b3b3b;
+
+  // Background - Primary
+  --ent-bg-primary: #a855f7;
+  --ent-bg-primary-highlight: #aa59f7;
+  --ent-bg-primary-select: #ac5ef7;
+  --ent-bg-primary-emphasis: #b166f8;
+
+  // Foreground 
+  //Body
+  --ent-fg-body: #e6e6e6;
+
+  // Foreground - Base - Tint 5% OF BODY
+  --ent-fg-base: #e7e7e7;
+  --ent-fg-base-highlight: #e8e8e8;
+  --ent-fg-base-selected: #e8e8e8;
+  --ent-fg-base-emphasis: #e9e9e9;
+
+  // Foreground - Base - Tint 95% OF BODY
+  --ent-fg-light: #f4f4f4;
+  --ent-fg-light-highlight: #f4f4f4;
+  --ent-fg-light-selected: #f4f4f4;
+  --ent-fg-light-emphasis: #f4f4f4;
+
+  // Foreground - Primary
+  --ent-fg-primary: #7e40b9;
+  --ent-fg-primary-highlight: #8145bb;
+  --ent-fg-primary-select: #844abd;
+  --ent-fg-primary-emphasis: #8b53c0;
+
+  // Stroke
+  // Base - Shade 10% BG Base
+  --ent-stroke-base: #3b3b3b;
+  --ent-stroke-base-highlight: #3b3b3b;
+  --ent-stroke-base-select: #3b3b3b;
+  --ent-stroke-base-emphasis: #4f4f4f;
+
+  // Primary - Shade 10% BG Primary
+  --ent-stroke-primary: #974dde;
+  --ent-stroke-primary-highlight: #9a51df;
+  --ent-stroke-primary-select: #9c56e0;
+  --ent-stroke-primary-emphasis: #a15fe1;
+  
   --ent-primary: #673AB7;
   --ent-primary-emphasis: #7447c5;
   --ent-primary-subtle: rgb(103, 58, 183, .15);
@@ -45,10 +95,6 @@ html[data-theme="dark"] {
   --ent-light-border-subtle: #35383c;
   --ent-dark-border-subtle: #3c3f42;
 
-  // background
-  --ent-bg-page: #1A1D21;
-
-  --ent-bg-body: #212529;
 
   // color 
   --ent-color-body: #ced4da;
