--- a/Source/Enter.UI/Styles/themes/light.theme.scss
+++ b/Source/Enter.UI/Styles/themes/light.theme.scss
@@ -1,43 +1,91 @@
 ﻿
 :root {
+
+  // Background - Body
+  --ent-bg-page: #f0f0f0;
   
+  --ent-bg-base: #ffffff;
+  --ent-bg-base-highlight: #fcfcfc;
+  --ent-bg-base-active: #fcfcfc;
+  --ent-bg-base-emphasis: #f7f7f7;
   
+  // Background - Primary
+  --ent-bg-primary: #a855f7; 
+  --ent-bg-primary-highlight: #a453f1; 
+  --ent-bg-primary-select: #a051eb;
+  --ent-bg-primary-emphasis: #974dde;
+  
+  // Foreground 
+  //Body
+  --ent-fg-body: #191919;
+
+  // Foreground - Base - Tint 5% OF BODY
+  --ent-fg-base: #252525;
+  --ent-fg-base-highlight: #242424;
+  --ent-fg-base-selected: #232323;
+  --ent-fg-base-emphasis: #212121;
+
+  // Foreground - Base - Tint 95% OF BODY
+  --ent-fg-light: #f4f4f4;
+  --ent-fg-light-highlight: #f4f4f4;
+  --ent-fg-light-selected: #f4f4f4;
+  --ent-fg-light-emphasis: #f4f4f4;
+
+  // Foreground - Primary
+  --ent-fg-primary: #7e40b9;
+  --ent-fg-primary-highlight: #7b3eb4;
+  --ent-fg-primary-select: #783db0;
+  --ent-fg-primary-emphasis: #713aa7;
+
+  // Stroke
+  // Base - Shade 10% BG Base
+  --ent-stroke-base: #eaeaea;
+  --ent-stroke-base-highlight: #e8e8e8;
+  --ent-stroke-base-select: #e6e6e6;
+  --ent-stroke-base-emphasis: #e4e4e4;
+
+  // Primary - Shade 10% BG Primary
+  --ent-stroke-primary: #974dde;
+  --ent-stroke-primary-highlight: #934bd8;
+  --ent-stroke-primary-select: #8f49d3;
+  --ent-stroke-primary-emphasis: #8f49d3;
+
   --ent-primary: #673AB7;
   --ent-primary-emphasis: #5d34a5;
   --ent-primary-subtle: #f0ebf9;
-  
+
   --ent-success: #4CAF50;
   --ent-success-emphasis: #449e48;
   --ent-success-subtle: #f0ebf9;
-  
+
   --ent-danger: #F44336;
   --ent-danger-emphasis: #f2291a;
   --ent-danger-subtle: #feeceb;
- 
+
   --ent-warning: #FFC107;
   --ent-warning-emphasis: #ecb100;
   --ent-warning-subtle: #fff9e6;
-  
+
   --ent-info: #2196F3;
   --ent-info-emphasis: #0d89ec;
   --ent-info-subtle: #e9f4fe;
-  
+
   --ent-secondary: #9C27B0;
   --ent-secondary-emphasis: #8c239e;
   --ent-secondary-subtle: #f7e7fa;
-  
+
   --ent-light: #f2f2f2;
   --ent-light-emphasis: #e2e2e2;
   --ent-light-subtle: #fbfbfb;
-  
+
   --ent-dark: #313131;
   --ent-dark-emphasis: #2c2c2c;
   --ent-dark-subtle: #d6d6d6;
-  
+
   --ent-link: #2196F3;
   --ent-link-emphasis: #0d89ec;
   --ent-link-subtle: #e9f4fe;
-  
+
   //border
   --ent-primary-border-subtle: #b3b9d0;
   --ent-secondary-border-subtle: #aec9f9;
@@ -47,30 +95,26 @@
   --ent-danger-border-subtle: #f9c1b6;
   --ent-light-border-subtle: #eff2f7;
   --ent-dark-border-subtle: #adb5bd;
-  
-  // background
-  --ent-bg-page : #F3F3F9;
-  --ent-bg-body : #ffffff;
-  
+
   // color
   --ent-color-body: #333;
-  --ent-color-emphasis : #000000;
+  --ent-color-emphasis: #000000;
   --ent-color-secondary: rgba(7, 20, 55, 0.75);
   --ent-color-tertiary: rgba(7, 20, 55, 0.5);
   --ent-color-light: #ced4da;
   --ent-color-dark: #071437;
   --ent-color-heading: #071437;
   --ent-color-link: #009ef7;
- 
+
   // border
   --ent-border-color: #e9ebec;
   --ent-border-width: 1px;
   --ent-border-style: solid;
   --ent-border-radius: 0.25rem;
-  
+
   // shadow
   --ent-shadow: 0px 0px 20px 0px rgba(76, 87, 125, 0.05);
-  
+
   //body
   --ent-body-font-size: 0.925rem;
   --ent-body-font-size-space: 0.075rem;
@@ -82,5 +126,5 @@
   --ent-z-index-secondary: 50;
   --ent-z-index-tertiary: 30;
   --ent-z-index-emphasis: 10;
-  
+
 }
